# sr-tuner-app

./: .gitignore  AGENTS.md  README.md  pubspec.yaml
backend/: pyproject.toml
backend/src/sr_tuner_api/: __init__.py  cause_codes.py  checkpoints.py  classic_workspace.py  config.py  datasets.py  diagnostic_logger.py  errors.py  ids.py  image_probe.py  inference.py  jobs.py  logging_middleware.py  logging_schema.py  main.py  metrics.py  models.py  project_store.py  runs.py  schemas.py  security.py
backend/tests/: conftest.py  test_checkpoints.py  test_classic_workspace.py  test_correlation_errors.py  test_diagnostic_logging.py  test_inference.py  test_job_logs_readable.py  test_projects.py  test_smoke.py
config/: sr_tuner.local.json
design_handoff_sr_tuner/: README.md  Wireframes.html  styles.css  wf-b-rest.jsx  wf-b-shell.jsx  wf-b-train.jsx  wf-common.jsx  wf-start.jsx
docs/: debug-troubleshooting.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_cached.json  .graphify_chunk_00.json  .graphify_chunk_00_files.txt  .graphify_chunk_01.json  .graphify_chunk_01_files.txt  .graphify_chunk_02.json  .graphify_chunk_02_files.txt  .graphify_chunk_03.json  .graphify_chunk_03_files.txt  .graphify_chunk_04.json  .graphify_chunk_04_files.txt  .graphify_chunk_05.json  .graphify_chunk_05_files.txt  .graphify_chunk_06.json  .graphify_chunk_06_files.txt  .graphify_chunk_07.json  .graphify_chunk_07_files.txt  .graphify_chunk_08.json  .graphify_chunk_08_files.txt  .graphify_detect.json  .graphify_extract.json  .graphify_incremental.json  .graphify_old.json  (+8 more)
(+138 files in other folders)
