[project]
name = "sr-tuner-api"
version = "0.1.0"
description = "Local FastAPI backend for sr-tuner."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
